--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
-*.rs linguist-language=Rust
+[attr]rust text eol=lf whitespace=tab-in-indent,trailing-space,tabwidth=4
+* text=auto eol=lf
+*.rs rust
