--- a/ui-src/Cargo.toml
+++ b/ui-src/Cargo.toml
@@ -3,10 +3,14 @@ name = "coolcats2"
 version = "0.1.0"
 authors = ["Michael Goldman <mike.goldman@allstreets.org>"]
 edition = "2018"
+build = "build.rs"
 
 [dependencies]
 yew = "0.5.0"
 stdweb = "0.4.10"
+failure = "0.1.3"
+serde = "1.0"
+serde_derive = "1.0"
 
 [patch.crates-io]
 yew = {git = "https://github.com/DenisKolodin/yew"}
