--- a/ui-src/package.json
+++ b/ui-src/package.json
@@ -8,6 +8,11 @@
     },
     "dependencies": {
         "@holochain/hc-redux-middleware": "^1.0.7",
+        "rpc-websockets": "^4.3.5"
+    },
+    "devDependencies": {
+        "ts-loader": "^5.3.1",
+        "typescript": "^3.2.2",
         "webpack": "^4.27.1",
         "webpack-cli": "^3.1.2"
     }
