--- a/ui-src/Cargo.toml
+++ b/ui-src/Cargo.toml
@@ -11,6 +11,7 @@ stdweb = "0.4.10"
 failure = "0.1.3"
 serde = "1.0"
 serde_derive = "1.0"
+serde_json = "1.0"
 
 [patch.crates-io]
 yew = {git = "https://github.com/DenisKolodin/yew"}
