--- a/ui-src/package.json
+++ b/ui-src/package.json
@@ -8,12 +8,15 @@
     },
     "dependencies": {},
     "devDependencies": {
+        "clean-webpack-plugin": "^1.0.0",
         "css-loader": "^2.1.0",
         "file-loader": "^3.0.1",
+        "html-webpack-plugin": "^3.2.0",
+        "html-webpack-template": "^6.2.0",
         "style-loader": "^0.23.1",
-        "ts-loader": "^5.3.1",
+        "ts-loader": "^5.3.2",
         "typescript": "^3.2.2",
-        "webpack": "^4.27.1",
+        "webpack": "^4.28.3",
         "webpack-cli": "^3.1.2"
     }
 }
