--- a/ui-src/Cargo.toml
+++ b/ui-src/Cargo.toml
@@ -10,6 +10,7 @@ yew = "0.5.0"
 stdweb = "0.4.10"
 serde = "1.0"
 serde_derive = "1.0"
+json = "0.11.13"
 
 [patch.crates-io]
 yew = {git = "https://github.com/DenisKolodin/yew"}
