--- a/ui-src/Cargo.toml
+++ b/ui-src/Cargo.toml
@@ -8,9 +8,10 @@ build = "build.rs"
 [dependencies]
 yew = "0.5.0"
 stdweb = "0.4.10"
-serde = "1.0"
-serde_derive = "1.0"
+serde = {version = "1.0.84", features = ["derive"]}
 json = "0.11.13"
+strum = "0.13.0"
+strum_macros = "0.13.0"
 
 [patch.crates-io]
 yew = {git = "https://github.com/DenisKolodin/yew"}
