--- a/ui-src/Cargo.toml
+++ b/ui-src/Cargo.toml
@@ -7,6 +7,7 @@ build = "build.rs"
 
 [dependencies]
 yew = "0.5.0"
+yew-router = "0.1.0"
 stdweb = "0.4.10"
 serde = {version = "1.0.84", features = ["derive"]}
 json = "0.11.13"
@@ -15,3 +16,4 @@ strum_macros = "0.13.0"
 
 [patch.crates-io]
 yew = {git = "https://github.com/DenisKolodin/yew"}
+yew-router = {git = "https://github.com/saschagrunert/yew-router"}
