--- a/ui-src/Cargo.toml
+++ b/ui-src/Cargo.toml
@@ -13,6 +13,7 @@ serde = {version = "1.0.84", features = ["derive"]}
 json = "0.11.13"
 strum = "0.13.0"
 strum_macros = "0.13.0"
+lazy_static = "1.2.0"
 
 [patch.crates-io]
 yew = {git = "https://github.com/DenisKolodin/yew"}
