--- a/ui-src/Cargo.toml
+++ b/ui-src/Cargo.toml
@@ -10,6 +10,7 @@ yew = "0.6.0"
 yew-router = "0.1.0"
 stdweb = "0.4.13"
 serde = {version = "1.0.87", features = ["derive"]}
+serde_json = "1.0.38"
 json = "0.11.13"
 strum = "0.13.0"
 strum_macros = "0.13.0"
