--- a/ui-src/package.json
+++ b/ui-src/package.json
@@ -11,6 +11,7 @@
         "clean-webpack-plugin": "^1.0.0",
         "css-loader": "^2.1.0",
         "file-loader": "^3.0.1",
+        "hard-source-webpack-plugin": "^0.13.1",
         "html-webpack-plugin": "^3.2.0",
         "html-webpack-template": "^6.2.0",
         "style-loader": "^0.23.1",
