Use conductor to launch both DNA and UI together with networking

--- a/ui-src/package.json
+++ b/ui-src/package.json
@@ -4,7 +4,8 @@
     "private": true,
     "scripts": {
         "build": "webpack; cargo +stable web build",
-        "start": "webpack; cargo +stable web start"
+        "start": "webpack; cargo +stable web start",
+        "deploy": "webpack; cargo +stable web deploy"
     },
     "dependencies": {},
     "devDependencies": {
