--- a/ui-src/Cargo.toml
+++ b/ui-src/Cargo.toml
@@ -19,3 +19,7 @@ lazy_static = "1.3.0"
 [patch.crates-io]
 yew = {git = "https://github.com/DenisKolodin/yew"}
 yew-router = {git = "https://github.com/saschagrunert/yew-router"}
+
+[profile.release]
+lto = true
+opt-level = 's'
