--- a/ui-src/package.json
+++ b/ui-src/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "build": "webpack; cargo +stable web build",
         "start": "webpack; cargo +stable web start",
-        "deploy": "webpack; cargo +stable web deploy; patch -p0 target/deploy/*.js < deploy-js.diff"
+        "deploy": "webpack; cargo +stable web deploy --release; patch -p0 target/deploy/*.js < deploy-js.diff"
     },
     "dependencies": {},
     "devDependencies": {
@@ -13,6 +13,7 @@
         "css-loader": "^2.1.0",
         "file-loader": "^3.0.1",
         "hard-source-webpack-plugin": "^0.13.1",
+        "html-beautify-webpack-plugin": "^1.0.5",
         "html-webpack-plugin": "^3.2.0",
         "html-webpack-template": "^6.2.0",
         "style-loader": "^0.23.1",
