--- a/ui-src/Cargo.toml
+++ b/ui-src/Cargo.toml
@@ -19,6 +19,7 @@ json = "0.11.13"
 strum = "0.13.0"
 strum_macros = "0.13.0"
 lazy_static = "1.3.0"
+regex = "1.1.2"
 
 [patch.crates-io]
 yew = {git = "https://github.com/DenisKolodin/yew"}
