Update to Holochain v0.0.22-alpha1

--- a/conductor/conductor-config-agent1.toml
+++ b/conductor/conductor-config-agent1.toml
@@ -37,6 +37,7 @@ port = 8000
 dna_interface = "websocket_interface1"
 
 [network]
+type="n3h"
 n3h_persistence_path = "/tmp/n3h/1"
 bootstrap_nodes = []
 
