--- a/conductor/conductor-config-agent3.toml
+++ b/conductor/conductor-config-agent3.toml
@@ -37,6 +37,7 @@ port = 8002
 dna_interface = "websocket_interface3"
 
 [network]
+type="n3h"
 n3h_persistence_path = "/tmp/n3h/3"
 bootstrap_nodes = []
 
