--- a/conductor/conductor-config-agent3.toml
+++ b/conductor/conductor-config-agent3.toml
@@ -9,6 +9,7 @@ keystore_file = "conductor/agent3.keystore"
 [[dnas]]
 id = "coolcats_dna"
 file = "dna-src/dist/coolcats.dna.json"
+hash = "Qmb1nduRCt9veiWso8nGu9cx4vXQdNqe7Z7u1C1qkCCHxs"
 
 [[instances]]
 id = "coolcats_instance3"
