--- a/ui-src/Cargo.toml
+++ b/ui-src/Cargo.toml
@@ -7,14 +7,14 @@ build = "build.rs"
 
 [profile.release]
 lto = true
-opt-level = 's'
+opt-level = 'z'
 
 [dependencies]
 json = "0.11.13"
 lazy_static = "1.3.0"
-serde = { version = "1.0.93", features = ["derive"] }
+serde = { version = "1.0.97", features = ["derive"] }
 serde_json = "1.0.39"
-stdweb = "0.4.17"
+stdweb = "0.4.18"
 strum = "0.13.0"
 strum_macros = "0.13.0"
 yew = "0.6.0"
