Edits for dna-src path reduction, workaround for hc package bug with multiple jsons

--- a/conductor/conductor-config-agent2.toml
+++ b/conductor/conductor-config-agent2.toml
@@ -8,7 +8,7 @@ keystore_file = "conductor/agent2.keystore"
 # -----------  DNA  -----------
 [[dnas]]
 id = "coolcats_dna"
-file = "dna-src/dist/coolcats.dna.json"
+file = "dist/coolcats2.dna.json"
 hash = "QmWHhGqoma4kBkG7rbKyVryYRB1G4UL7k5ruDEhsrnG5mZ"
 
 [[instances]]
