--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -3,7 +3,9 @@ name = "coolcats2"
 version = "0.1.0"
 authors = ["Michael Goldman <mike.goldman@allstreets.org>"]
 edition = "2018"
-build = "build.rs"
+
+[lib]
+crate-type = ["cdylib", "rlib"]
 
 [profile.release]
 lto = true
@@ -17,5 +19,6 @@ serde_json = "1.0.40"
 stdweb = "0.4.18"
 strum = "0.15.0"
 strum_macros = "0.15.0"
+wasm-bindgen = "=0.2.42"
 yew = "0.8.0"
 yew-router = "0.4.0"
