Build improvements to find and install most dependencies

--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "coolcats2"
-version = "0.1.0"
+name = "coolcats-ui"
+version = "0.2.0"
 authors = ["Michael Goldman <mike.goldman@allstreets.org>"]
 edition = "2018"
 
