Use webpack-blocks to configure nicely

--- a/ui/package.json
+++ b/ui/package.json
@@ -1,22 +1,18 @@
 {
     "private": true,
     "scripts": {
-        "build": "webpack --mode development --progress --color --display-error-details",
-        "start": "webpack-dev-server --mode development --watch",
-        "deploy": "webpack --mode production"
+        "build": "webpack -d --mode development --progress --color --display-error-details",
+        "start": "webpack-dev-server -d --mode development --watch",
+        "deploy": "webpack -p --mode production"
     },
     "devDependencies": {
         "@wasm-tool/wasm-pack-plugin": "^1.0.0",
         "clean-webpack-plugin": "^3.0.0",
-        "css-loader": "^3.2.0",
-        "file-loader": "^4.2.0",
         "html-beautify-webpack-plugin": "^1.0.5",
         "html-webpack-plugin": "^3.2.0",
         "html-webpack-template": "^6.2.0",
-        "style-loader": "^1.0.0",
-        "ts-loader": "^6.0.4",
-        "typescript": "^3.5.3",
         "webpack": "^4.39.2",
+        "webpack-blocks": "^2.0.1",
         "webpack-cli": "^3.3.7",
         "webpack-dev-server": "^3.7.2"
     }
