--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -5,6 +5,7 @@
     "module": "es6",
     "target": "es5",
     "lib": ["es6", "dom"],
-    "allowJs": true
+    "allowJs": true,
+    "skipLibCheck": true
   }
 }
