--- a/ui/package.json
+++ b/ui/package.json
@@ -7,6 +7,7 @@
     },
     "devDependencies": {
         "@wasm-tool/wasm-pack-plugin": "^1.0.0",
+        "@webpack-blocks/core": "^2.0.0",
         "clean-webpack-plugin": "^3.0.0",
         "html-beautify-webpack-plugin": "^1.0.5",
         "html-webpack-plugin": "^3.2.0",
@@ -14,6 +15,6 @@
         "webpack": "^4.39.2",
         "webpack-blocks": "^2.0.1",
         "webpack-cli": "^3.3.7",
-        "webpack-dev-server": "^3.7.2"
+        "webpack-dev-server": "^3.8.0"
     }
 }
