--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Coolcats2",
+  "name": "Coolcats",
   "description": "Rust port of Clutter, a fully distributed social messaging app built on Holochain",
   "authors": [
     {
