--- a/ui/gabbycat/Cargo.toml
+++ b/ui/gabbycat/Cargo.toml
@@ -14,6 +14,8 @@ opt-level = 's'
 [dependencies]
 fluent = "0.7.1"
 stdweb = "0.4.18"
+strum = "0.15.0"
+strum_macros = "0.15.0"
 unic-langid = "0.4.2"
 wasm-bindgen = "=0.2.42"
 yew = "0.8.0"
