--- a/conductor/conductor-config-agent3.toml
+++ b/conductor/conductor-config-agent3.toml
@@ -8,8 +8,8 @@ keystore_file = "conductor/agent3.keystore"
 # -----------  DNA  -----------
 [[dnas]]
 id = "coolcats_dna"
-file = "dist/coolcats2.dna.json"
-hash = "QmNhzHhnJPamSSCXJRFYM2HtK7vzLFoDjG9drW9bQDuEGz"
+file = "dist/coolcats.dna.json"
+hash = "QmSWPkxapsvSJKZMtagXdxBsPEi7Lb48PwA9Aya5E7DLh8"
 
 [[instances]]
 id = "coolcats_instance3"
@@ -28,12 +28,12 @@ id = "coolcats_instance3"
 
 # -----------  UI  -----------
 [[ui_bundles]]
-id = "coolcats3_ui"
+id = "coolcats_ui3"
 root_dir = "ui/target/deploy"
 
 [[ui_interfaces]]
 id = "ui-interface3"
-bundle = "coolcats3_ui"
+bundle = "coolcats_ui3"
 port = 8002
 dna_interface = "websocket_interface3"
 
