--- a/ui/standard/Cargo.toml
+++ b/ui/standard/Cargo.toml
@@ -7,14 +7,11 @@ edition = "2018"
 [lib]
 crate-type = ["cdylib", "rlib"]
 
-[profile.release]
-codegen-units = 1
-opt-level = 's'
-
 [dependencies]
+coolcats-utils = { path = "../utils" }
 json = "0.11.15"
-lazy_static = "1.3.0"
-serde = { version = "1.0.99", features = ["derive"] }
+lazy_static = "1.4.0"
+serde = { version = "1.0.100", features = ["derive"] }
 serde_json = "1.0.40"
 stdweb = "0.4.18"
 strum = "0.15.0"
