--- a/ui/gabbycat/Vagrantfile
+++ b/ui/gabbycat/Vagrantfile
@@ -18,10 +18,9 @@ sudo apt-add-repository 'deb https://dl.yarnpkg.com/debian/ stable main'
 curl -sL https://deb.nodesource.com/setup_10.x | sudo bash -
 
 # Add packages to build and run gabbycat
-sudo apt-get install \
+sudo apt-get install -y \
   gcc \
-  yarn \
-  -y
+  yarn
 
 # Install Rust + wasm-pack
 curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh /dev/stdin -y
