Use coolcats-utils in gabbycat

--- a/ui/gabbycat/Cargo.toml
+++ b/ui/gabbycat/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
+coolcats-utils = { path = "../utils" }
 fluent = "0.7.1"
 lazy_static = "1.4.0"
 serde = { version = "1.0.100", features = ["derive"] }
