Implement UsesLocaleValues as procedural macro

--- a/ui/gabbycat/macros/derive/Cargo.toml
+++ b/ui/gabbycat/macros/derive/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
-name = "gabbycat-macros"
+name = "gabbycat-macros-derive"
 version = "0.1.0"
 authors = ["Michael Goldman <mike.goldman@allstreets.org>"]
 edition = "2018"
 
+[lib]
+proc-macro = true
+
 [dependencies]
-gabbycat-macros-derive = { path = "derive" }
+syn = "1.0.5"
+quote = "1.0.2"
