--- a/zomes/coolcats/code/Cargo.toml
+++ b/zomes/coolcats/code/Cargo.toml
@@ -5,17 +5,17 @@ authors = ["Michael Goldman <mike.goldman@allstreets.org>"]
 edition = "2018"
 
 [dependencies]
-hdk = "=0.0.29-alpha2"
-hdk-proc-macros = "=0.0.29-alpha2"
+hdk = "=0.0.30-alpha6"
+hdk-proc-macros = "=0.0.30-alpha6"
 holochain_json_derive = "=0.0.17"
-holochain_wasm_utils = "=0.0.29-alpha2"
-serde = { version = "1.0.89", features = ["derive"] }
+holochain_wasm_utils = "=0.0.30-alpha6"
+serde = { version = "=1.0.89", features = ["derive"] }
 serde_json = "1.0.39"
 
 [patch.crates-io]
-hdk = { git = "https://github.com/holochain/holochain-rust" }
-hdk-proc-macros = { git = "https://github.com/holochain/holochain-rust" }
-holochain_wasm_utils = { git = "https://github.com/holochain/holochain-rust" }
+hdk = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.30-alpha6" }
+hdk-proc-macros = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.30-alpha6" }
+holochain_wasm_utils = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.30-alpha6" }
 
 [lib]
 crate-type = ["cdylib"]
