--- a/ui/gabbycat/Cargo.toml
+++ b/ui/gabbycat/Cargo.toml
@@ -18,4 +18,4 @@ strum = "0.15.0"
 strum_macros = "0.15.0"
 unic-langid = "0.4.2"
 wasm-bindgen = "=0.2.42"
-yew = "0.8.0"
+yew = { version = "0.9.0", git = "https://github.com/yewstack/yew" }
