User presenter in docker

--- a/ui/gabbycat/Dockerfile
+++ b/ui/gabbycat/Dockerfile
@@ -23,6 +23,7 @@ RUN apt-get update && apt-get install -y \
 # Drop to user privileges now that system is updated
 RUN useradd -ms /bin/bash docker \
   && mkdir -p /home/docker/gabbycat \
+  && mkdir -p /home/docker/presenter \
   && chown -R docker /home/docker
 USER docker
 
@@ -31,20 +32,29 @@ RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh /dev/stdin -y
 ENV PATH="/home/docker/.cargo/bin:${PATH}"
 RUN curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
 
-# Copy the local files
-WORKDIR /home/docker
-COPY ./tmp/utils/ ./utils/
+# Copy the gabbycat files
+WORKDIR /home/docker/utils
+COPY ./tmp/utils/ ./
 WORKDIR /home/docker/gabbycat
 COPY Cargo.toml bootstrap.js package.json tsconfig.json webpack.config.js ./
 COPY ./src/ ./src/
 COPY ./macros/ ./macros/
 
-# Install node modules
-RUN yarn install
+# Install node modules and build gabbycat
+RUN yarn install && yarn run webpack -p --mode production
 
-# Build gabbycat
-RUN yarn run webpack -p --mode production
+# Install known good Rust nightly for presenter build
+RUN rustup toolchain install nightly-2019-07-14 && rustup default nightly-2019-07-14
+
+# Copy the presenter files
+WORKDIR /home/docker/presenter
+COPY ./tmp/presenter/Cargo.toml ./
+COPY ./tmp/presenter/src/ ./src/
+
+# Build presenter
+RUN cargo install --path . && strip `which presenter`
 
 # Prepared for docker run
+WORKDIR /home/docker
 EXPOSE 8000
-ENTRYPOINT yarn run webpack-dev-server -p --mode production
+ENTRYPOINT presenter target/deploy
