--- a/ui/gabbycat/Dockerfile
+++ b/ui/gabbycat/Dockerfile
@@ -14,10 +14,14 @@ RUN apt-add-repository 'deb https://dl.yarnpkg.com/debian/ stable main'
 # Add repo for NodeJS
 RUN curl -sL https://deb.nodesource.com/setup_10.x | bash -
 
-# Add packages to build gabbycat and presenter
+# Add packages to build and optimize gabbycat and presenter
 RUN apt-get update && apt-get install -y \
+    cmake \
+    g++ \
     gcc \
+    git \
     musl-tools \
+    ninja-build \
     yarn \
   && apt-get clean && rm -rf /var/lib/apt/lists/*
 
@@ -27,6 +31,12 @@ RUN useradd -ms /bin/bash docker \
   && mkdir -p /home/docker/presenter \
   && chown -R docker /home/docker
 USER docker
+
+# Build wasm-opt
+WORKDIR /home/docker
+RUN git clone https://github.com/WebAssembly/binaryen.git
+WORKDIR /home/docker/binaryen
+RUN cmake -G Ninja . && ninja wasm-opt && mv bin/wasm-opt ~ && ninja clean
 
 # Install Rust + wasm-pack
 RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh /dev/stdin -y
@@ -45,9 +55,17 @@ COPY ./macros/ ./macros/
 RUN yarn install && yarn run webpack -p --mode production \
   && cargo clean && rm -rf pkg node_modules yarn.lock
 
+# Optimize the gabbycat deployment for size
+WORKDIR /home/docker/target/deploy
+RUN for file in *.wasm; do \
+    ~/wasm-opt -Os -o $file.new $file && mv -f $file.new $file; \
+  done; \
+  gzip -9 *.wasm *.js fonts/* */*.svg
+
 # Install known good Rust nightly and static target for presenter build
-RUN rustup toolchain install nightly-2019-07-14 && rustup default nightly-2019-07-14
-RUN rustup target add x86_64-unknown-linux-musl
+RUN rustup toolchain install nightly-2019-07-14 \
+  && rustup default nightly-2019-07-14 \
+  && rustup target add x86_64-unknown-linux-musl
 
 # Copy the presenter files
 WORKDIR /home/docker/presenter
@@ -55,7 +73,8 @@ COPY ./tmp/presenter/Cargo.toml ./
 COPY ./tmp/presenter/src/ ./src/
 
 # Build presenter
-RUN cargo install --target x86_64-unknown-linux-musl --path . && cargo clean
+RUN cargo install --target x86_64-unknown-linux-musl --path . \
+  && cargo clean && strip `which presenter`
 
 # Reduce our docker image to the built targets and prepare for docker run
 FROM alpine:3.9
